Fix cut off roof and floatImage z-index

--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 
 .header{
     background-color: Colour.$BEIGE;
+    height: 64px;
     img{
         height: 50px;
     }
@@ -56,7 +57,6 @@
             grid-column-start: 1;
             grid-column-end: 3;   
             height: 250px; 
-            margin-top:-25px;
         }
         // Left Title
         > div:nth-of-type(2) {
@@ -66,6 +66,8 @@
             grid-column-start: 1;
             grid-column-end: 2;
             height: 100%;
+            position: relative;
+            z-index: 1;
             img {
                 height: 50px;
                 padding-top:20px;
@@ -98,8 +100,7 @@
                 grid-row-start: 1;
                 grid-row-end: 2;
                 grid-column-start: 1;
-                height: 150px; 
-                margin-top:-25px;
+                height: 150px;
             }
             // Left Title
             > div:nth-of-type(2) {
@@ -476,7 +477,7 @@
 }
 
 .sec6 {
-    height: 500px;
+    height: 600px;
     > .content{
         display: grid;
         grid-template-columns: 50% 50%;
