--- a/styles/_Illustrations.scss
+++ b/styles/_Illustrations.scss
@@ -123,7 +123,7 @@
     background-size: 70px;
     width: 70px;
     height: 70px;
-    background-repeat: none;
+    background-repeat: no-repeat;
 }
 
 .helpFloat {
